[metadata]
name = movieknight
version = attr: movieknight.__version__
description = Movie Knight
long_description = file: README.md
long_description_content_type = text/markdown
author = Natalie Fearnley
author_email = nfearnley@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = sizebot
project_urls =
    Source=https://github.com/nfearnley/movieknight
    Tracker=https://github.com/nfearnley/movieknight/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes
include_package_data = True
install_requires =
    discord.py==1.7.3
    discord-py-slash-command==3.0.1
    appdirs==1.4.4
    toml==0.10.2

[options.extras_require]
dev =
    pytest==6.2.4
    flake8==3.9.2
    autopep8==1.5.7

[options.entry_points]
console_scripts =
    movieknight = movieknight.main:main

[flake8]
ignore = E501,W503
per-file-ignores =
    */__init__.py:F401,F403

[mypy]
plugins = sqlmypy
